# pdf-file-to-google-sheets

./: .gitignore  README.md
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py  models.py
backend/app/parsers/: __init__.py  inter.py  itau.py  nubank.py
backend/tests/: test_parsers.py
frontend/: README.md  package-lock.json
frontend/src/: app.css  app.html
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
